@@ -1,63 +1,17 @@
-/* test type ahead */
-.typeahead,
-.tt-query,
-.tt-hint {
-  width: 396px;
-  height: 30px;
-  padding: 8px 12px;
-  font-size: 24px;
-  line-height: 30px;
-  -webkit-border-radius: 8px;
-     -moz-border-radius: 8px;
-          border-radius: 8px;
-  outline: none;
-}
+/* CSS for Search page */
 
-.typeahead {
-  background-color: #fff;
-}
+.typeahead, .tt-query, .tt-hint {width:396px; height:30px; padding:8px 12px; font-size:24px; line-height:30px; -webkit-border-radius:8px; -moz-border-radius:8px; border-radius:8px; outline:none;}
+.typeahead {background-color:#fff;}
+.typeahead:focus {border:2px solid #0097cf;}
+.tt-hint {color:#999;}
+.tt-menu {width:100%; margin:12px 0; padding:8px 0; background-color:#fff;max-height:320px; overflow-y:auto;}
+.tt-suggestion {padding:3px 20px; font-size:18px; line-height:24px;}
+.tt-suggestion:hover {cursor:pointer; color:#fff; background-color:#0097cf;}
+.tt-suggestion.tt-cursor {color:#fff; background-color:#0097cf;}
+.tt-suggestion p {margin:0;}
 
-.typeahead:focus {
-  border: 2px solid #0097cf;
-}
-
-.tt-hint {
-  color: #999
-}
-
-.tt-menu {
-  width: 100%;
-  margin: 12px 0;
-  padding: 8px 0;
-  background-color: #fff;
-  max-height: 320px;
-  overflow-y: auto;
-}
-
-.tt-suggestion {
-  padding: 3px 20px;
-  font-size: 18px;
-  line-height: 24px;
-}
-
-.tt-suggestion:hover {
-  cursor: pointer;
-  color: #fff;
-  background-color: #0097cf;
-}
-
-.tt-suggestion.tt-cursor {
-  color: #fff;
-  background-color: #0097cf;
-
-}
-
-.tt-suggestion p {
-  margin: 0;
-}
-
-.crumb_wrap					{display:none;}
-#view_search_test			{margin:auto; width:960px; margin-bottom:480px; margin-top:20px;}
+.crumb_wrap				{display:none;}
+#view_search_test		{margin:auto; width:960px; margin-bottom:480px; margin-top:20px;}
 input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px; height:48px; border:0; margin-top:10px;}
-.search						{display:inline-block; width:320px; margin-bottom:10px;}
-
+.search					{display:inline-block; width:320px; margin-bottom:15px;}
+.search_label			{color:#fff;font-size:1em;border-bottom:1px solid #888;padding-bottom:5px;margin-right:23px;margin-bottom:10px;}
