@@ -1,6 +1,8 @@
 Development Portal (2015-06-24 shi)
 ==============================
 Added initial page layout for Search
+Added labels to search
+Clean up CSS for Search
 
 
 Development Portal (2015-06-18 shi)
